--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,15 @@
   <title>rowanote</title>
 </head>
 <body>
+  <header>
+    <h1>Planets of the Universe</h1>
+    <nav>
+      <ul>
+        <li><a href="{{site.baseurl}}/index.html">Home</a></li>
+        <li><a href="{{site.baseurl}}/news.html">News</a></li>
+      </ul>
+    </nav>
+  </header>
 {{content}}
 </body>
 </html>
